policies/flux/helm-release-enable-tests.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: helm-release-enable-tests
  annotations:
    policies.kyverno.io/title: Helm Release Enable Tests
    policies.kyverno.io/category: Flux
    policies.kyverno.io/severity: low
    policies.kyverno.io/subject: HelmRelease
    policies.kyverno.io/minversion: 1.18.0
    policies.kyverno.io/description: >-
      Enables Helm test actions for Flux HelmRelease v2 resources which opt in
      with the helm.toolkit.fluxcd.io/helm-test: enabled label.
spec:
  background: false
  rules:
    - name: enable-helm-tests
      match:
        any:
          - resources:
              kinds:
                - helm.toolkit.fluxcd.io/v2/HelmRelease
              operations:
                - CREATE
                - UPDATE
              selector:
                matchLabels:
                  helm.toolkit.fluxcd.io/helm-test: enabled
      mutate:
        patchStrategicMerge:
          spec:
            test:
              enable: true
